@@ -383,7 +383,7 @@
     <table width="100%" cellpadding="1" cellspacing="1"
            tal:define="hasAnnexes python: context.hasAnnexesWhere(relatedTo='item');
                        hasAnnexesDecision python: context.hasAnnexesWhere(relatedTo='item_decision');
-                       hasAdvices python: (meetingConfig.getUseAdvices() or context.displayAdvices())">
+                       hasAdvices python: (meetingConfig.getUseAdvices() or context.adapted().showAdvices())">
         <tr style="vertical-align: top;">
             <td class="itemAnnexesCell" width="50%">
                 <fieldset>
